--- a/02-clock/css/styles.css
+++ b/02-clock/css/styles.css
@@ -1,84 +1,92 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
-    background: grey;
+	background-image: url('../images/Avengers.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	width: 100vw;
+	padding-top: 28.5vh;
 }
 
 .clock {
-    border-radius: 50%;
-    background: #fff url('../images/clock.svg') no-repeat center;
-    background-size: 88%;
-    height: 20em;
-    padding-bottom: 31%;
-    position: relative;
-    width: 20em;
-    margin: 10% auto;
-  }
-  
-  .clock::before {
-    background: #000;
-    border-radius: 50%;
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 5%;
-    height: 5%;
-    z-index: 10;
-  }
+	opacity: 0.9;
+	border-radius: 50%;
+	background: rgba(255, 255, 255, 0.466) url('../images/clock.png') no-repeat
+		center;
+	background-size: 88%;
+	height: 50vh;
+	position: relative;
+	width: 50vh;
+	margin: auto;
+}
 
-  .clock::after {
-    content: "QUARTZ";
-    position: absolute;
-    width: 100%;
-    font: normal 0.8em Arial;
-    color: gray;
-    text-align: center;
-    top: 65%
-    }
+.clock::before {
+	background: #000;
+	border-radius: 50%;
+	content: '';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 5%;
+	height: 5%;
+	z-index: 10;
+}
 
-  .minutes-container, .hours-container, .seconds-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
+.clock::after {
+	position: absolute;
+	width: 100%;
+	font: normal 0.8em Arial;
+	color: gray;
+	text-align: center;
+	top: 65%;
+}
 
-  .hours {
-    background: #000;
-    height: 20%;
-    left: 48.75%;
-    position: absolute;
-    top: 30%;
-    transform-origin: 50% 100%;
-    width: 2.5%;
-  }
+.minutes-container,
+.hours-container,
+.seconds-container {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
 
-  .minutes {
-    background: purple;
-    height: 40%;
-    left: 49%;
-    position: absolute;
-    top: 10%;
-    width: 2%;
-    transform-origin: 50% 100%;
-    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-  }
+.hours {
+	background: rgb(32, 32, 32);
+	height: 20%;
+	left: 48.75%;
+	position: absolute;
+	top: 30%;
+	transform-origin: 50% 100%;
+	width: 2.5%;
+}
 
-  .seconds {
-    background: rgb(226, 11, 11);
-    height: 45%;
-    left: 49.5%;
-    position: absolute;
-    top: 14%;
-    transform-origin: 50% 80%;
-    width: 1%;
-    z-index: 8;
-    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-  }
+.minutes {
+	background: rgb(145, 145, 145);
+	height: 40%;
+	left: 49%;
+	position: absolute;
+	top: 10%;
+	width: 2%;
+	transform-origin: 50% 100%;
+	transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.seconds {
+	background: rgb(75, 75, 75);
+	height: 45%;
+	left: 49.5%;
+	position: absolute;
+	top: 14%;
+	transform-origin: 50% 80%;
+	width: 1%;
+	z-index: 8;
+	transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
